src/main/resources/deployment_coba.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"kind":"Deployment","apiVersion":"apps/v1","metadata":{"name":"coba","creationTimestamp":null,"labels":{"app":"coba"}},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"coba"}},"template":{"metadata":{"creationTimestamp":null,"labels":{"app":"coba"}},"spec":{"containers":[{"name":"coba","image":"image-registry.openshift-image-registry.svc:5000/coba/coba@sha256:aab832be43d8ef4ec37df51be5479074719a84e3bbf2fdb9fb9de9a","resources":{}}]}},"strategy":{}},"status":{}}
  generation: 1
  labels:
    app: coba
  name: coba
  namespace: coba
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: coba
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: coba
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/coba/coba:latest
        imagePullPolicy: Always
        name: coba
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File

        ports:
          - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /test.html
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 1

      imagePullPolicy: Always
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
