src/main/resources/service_coba.yaml
kind: Service
apiVersion: v1
metadata:
  name: coba
  namespace: coba
  labels:
    app: coba
    app.kubernetes.io/component: coba
    app.kubernetes.io/instance: coba
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
spec:
  clusterIP: 172.30.130.238
  ipFamilies:
    - IPv4
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: 8778-tcp
      protocol: TCP
      port: 8778
      targetPort: 8778
  internalTrafficPolicy: Cluster
  clusterIPs:
    - 172.30.130.238
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: coba
