src/main/resources/route_coba.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: coba
  namespace: coba
  labels:
    app: coba
    app.kubernetes.io/component: coba
    app.kubernetes.io/instance: coba
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: coba
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
